--- a/hardskills/modulohtml/aula23/gamedev.html
+++ b/hardskills/modulohtml/aula23/gamedev.html
@@ -19,7 +19,7 @@
                             <img src="images/logos/icon-unity.png" />
                         </span>
                         <div class="list">
-                            <span>
+                            <span class="item">
                                 <h4>Unity Engine</h4>
                                 <span class="star5">
                                     <img src="images/icons/emote_star.png">
@@ -29,7 +29,7 @@
                                     <img src="images/icons/emote_star.png">
                                 </span>
                             </span>
-                            <span>
+                            <span class="item">
                                 <h4>Unity Editor</h4>
                                 <span class="star4">
                                     <img src="images/icons/emote_star.png">
@@ -39,7 +39,7 @@
                                     <img src="images/icons/emote_star.png">
                                 </span>
                             </span>
-                            <span>
+                            <span class="item">
                                 <h4>CSharp</h4>
                                 <span class="star4">
                                     <img src="images/icons/emote_star.png">
@@ -49,7 +49,7 @@
                                     <img src="images/icons/emote_star.png">
                                 </span>
                             </span>
-                            <span>
+                            <span class="item">
                                 <h4>Networking</h4>
                                 <span class="star2">
                                     <img src="images/icons/emote_star.png">
@@ -59,7 +59,7 @@
                                     <img src="images/icons/emote_star.png">
                                 </span>
                             </span>
-                            <span>
+                            <span class="item">
                                 <h4>Artificial Inteligence</h4>
                                 <span class="star3">
                                     <img src="images/icons/emote_star.png">
