--- a/hardskills/modulohtml/aula23/home.html
+++ b/hardskills/modulohtml/aula23/home.html
@@ -15,7 +15,7 @@
             <p>Curioso, proativo, entusiasta de ciência e jogos em seus mais variados aspectos, da teoria á prática.</p>
             <p>Em constante evolução de <strong>SoftSkills</strong> e <strong>HardSkills</strong>.</p>
             <p>Tenho alguma experiência na área de <strong>Game Dev</strong>.</p>
-            <p><i>"Não acredito em impossível, mesmo que seja improvável"</i> - Eu mesmo</p>
+            <p><i>"Não acredito no impossível, mesmo que seja inesperado"</i></p>
             <hr>
         </div>
         <a href="https://luisgustavoczp.github.io/IFPR-Desenvolvimento-Web-I/" target="_blank">GitPage IFPR</a>
