--- a/hardskills/modulohtml/aula23/myself.html
+++ b/hardskills/modulohtml/aula23/myself.html
@@ -37,7 +37,7 @@
                                 <img src="images/icons/emote_star.png">
                             </span>
                         </span>
-                        <span>
+                        <span class="item">
                             <h4>Criatividade</h4>
                             <span class="star5">
                                 <img src="images/icons/emote_star.png">
@@ -47,7 +47,7 @@
                                 <img src="images/icons/emote_star.png">
                             </span>
                         </span>
-                        <span>
+                        <span class="item">
                             <h4>Inteligencia Emocional</h4>
                             <span class="star4">
                                 <img src="images/icons/emote_star.png">
@@ -57,7 +57,7 @@
                                 <img src="images/icons/emote_star.png">
                             </span>
                         </span>
-                        <span>
+                        <span class="item">
                             <h4>Análise Cinésica</h4>
                             <span class="star2">
                                 <img src="images/icons/emote_star.png">
@@ -72,7 +72,7 @@
                 <div>
                     <h3 class="skills-header">HardSkills</h3>
                     <div class="list">
-                        <span>
+                        <span class="item">
                             <h4>Edição de Imagens</h4>
                             <span class="star3">
                                 <img src="images/icons/emote_star.png">
@@ -82,7 +82,7 @@
                                 <img src="images/icons/emote_star.png">
                             </span>
                         </span>
-                        <span>
+                        <span class="item">
                             <h4>Design</h4>
                             <span class="star2">
                                 <img src="images/icons/emote_star.png">
@@ -92,7 +92,7 @@
                                 <img src="images/icons/emote_star.png">
                             </span>
                         </span>
-                        <span>
+                        <span class="item">
                             <h4>Modelagem 3D</h4>
                             <span class="star3">
                                 <img src="images/icons/emote_star.png">
@@ -102,9 +102,9 @@
                                 <img src="images/icons/emote_star.png">
                             </span>
                         </span>
-                        <span class="star2">
+                        <span class="item">
                             <h4>Animação 3D</h4>
-                            <span>
+                            <span class="star2">
                                 <img src="images/icons/emote_star.png">
                                 <img src="images/icons/emote_star.png">
                                 <img src="images/icons/emote_star.png">
