--- a/hardskills/modulohtml/aula23/webdev.html
+++ b/hardskills/modulohtml/aula23/webdev.html
@@ -17,7 +17,7 @@
                     <div>
                         <h3>Habilidades <strong>Front-End</strong></h3>
                         <div class="list">
-                            <span>
+                            <span class="item">
                                 <img src="images/logos/icon-html.png" title="HTML" />
                                 <span class="star4">
                                     <img src="images/icons/emote_star.png">
@@ -27,7 +27,7 @@
                                     <img src="images/icons/emote_star.png">
                                 </span>
                             </span>
-                            <span>
+                            <span class="item">
                                 <img src="images/logos/icon-css.png" title="CSS" />
                                 <span class="star3">
                                     <img src="images/icons/emote_star.png">
@@ -37,7 +37,7 @@
                                     <img src="images/icons/emote_star.png">
                                 </span>
                             </span>
-                            <span>
+                            <span class="item">
                                 <img src="images/logos/icon-js.png" title="JavaScript" />
                                 <span class="star2">
                                     <img src="images/icons/emote_star.png">
@@ -52,7 +52,7 @@
                     <div>
                         <h3>Habilidades <strong>Back-End</strong></h3>
                         <div class="list">
-                            <span>
+                            <span class="item">
                                 <img src="images/logos/icon-web.png" title="Servidores" />
                                 <span class="star1">
                                     <img src="images/icons/emote_star.png">
@@ -62,7 +62,7 @@
                                     <img src="images/icons/emote_star.png">
                                 </span>
                             </span>
-                            <span>
+                            <span class="item">
                                 <img src="images/logos/icon-nodejs.png" title="NodeJS" />
                                 <span class="star0">
                                     <img src="images/icons/emote_star.png">
@@ -72,7 +72,7 @@
                                     <img src="images/icons/emote_star.png">
                                 </span>
                             </span>
-                            <span>
+                            <span class="item">
                                 <img src="images/logos/icon-postgree.png" title="Postgree" />
                                 <span class="star0">
                                     <img src="images/icons/emote_star.png">
