--- a/hardskills/modulohtml/aula23/index.html
+++ b/hardskills/modulohtml/aula23/index.html
@@ -37,9 +37,9 @@
             </div>
             <hr>
             <span>
-                Todos os direitos reservados a <strong>Luis Gustavo C. Z. Pereira </strong> 
+                Todos os direitos reservados a <strong>Luis Gustavo C. Z. Pereira </strong>
+                <audio autoplay id="audio"></audio>
             </span>
-            <audio src=""></audio>
         </footer>
         <script src="scripts/main.js"></script>
     </body>
