update final o retorno

--- a/hardskills/modulohtml/aula23/index.html
+++ b/hardskills/modulohtml/aula23/index.html
@@ -11,18 +11,19 @@
         <header>
             <div>
                 <img id="photo" />
-                <div>
-                    <h1>Luis Gustavo C. Z. Pereira</h1>
-                    <h4>
-                        <span>Web Developer</span>
-                        /
-                        <span>Programmer</span>
-                    </h4>
-                    <h2>Curriculum Vitae</h2>
-                </div>
-                <nav id="menu"></nav>
+                <span>
+                    <div id="titlebox">
+                        <h1>Luis Gustavo C. Z. Pereira</h1>
+                        <h4>
+                            <span>Web Developer</span>
+                            /
+                            <span>Programmer</span>
+                        </h4>
+                        <h2>Curriculum Vitae</h2>
+                    </div>
+                    <nav id="menu"></nav>
+                </span>
             </div>
-            
         </header>
         <main>
             <!--<nav id="submenu"></nav>-->
