--- a/hardskills/modulohtml/aula23/gamedev.html
+++ b/hardskills/modulohtml/aula23/gamedev.html
@@ -2,14 +2,9 @@
     <div>
         <div>
             <h2>Desenvolvimento de Games</h2>
-            <p>Tenho como passa-tempo programar e estudar desenvolvimento de jogos e Unity Engine.</p>
+            <p>Tenho como passa-tempo programar e estudar sobre desenvolvimento de jogos e Unity Engine.</p>
         </div>
         <div>
-            <hr>
-            <div>
-                <h3>Objetivos</h3>
-                <p>Em meu tempo livre criar bibliotecas com sistemas que ajudem outras pessoas a criarem seus jogos.</p>
-            </div>
             <hr>
             <div class="grade">
                 <span>
