--- a/hardskills/modulohtml/aula23/myself.html
+++ b/hardskills/modulohtml/aula23/myself.html
@@ -9,17 +9,71 @@
                 <div>
                     <h3>Interesses</h3>
                     <div class="list">
-                        <strong>Programação</strong>
-                        <strong>Músicas</strong>
-                        <strong>Games</strong>
+                        <span class="item">
+                            <h4>Programação</h4>
+                            <span class="star5">
+                                <img src="images/icons/emote_heart.png">
+                                <img src="images/icons/emote_heart.png">
+                                <img src="images/icons/emote_heart.png">
+                                <img src="images/icons/emote_heart.png">
+                                <img src="images/icons/emote_heart.png">
+                            </span>
+                        </span>
+                        <span class="item">
+                            <h4>Músicas</h4>
+                            <span class="star4">
+                                <img src="images/icons/emote_heart.png">
+                                <img src="images/icons/emote_heart.png">
+                                <img src="images/icons/emote_heart.png">
+                                <img src="images/icons/emote_heart.png">
+                                <img src="images/icons/emote_heart.png">
+                            </span>
+                        </span>
+                        <span class="item">
+                            <h4>Games</h4>
+                            <span class="star4">
+                                <img src="images/icons/emote_heart.png">
+                                <img src="images/icons/emote_heart.png">
+                                <img src="images/icons/emote_heart.png">
+                                <img src="images/icons/emote_heart.png">
+                                <img src="images/icons/emote_heart.png">
+                            </span>
+                        </span>
                     </div>
                 </div>
                 <div>
                     <h3>Desinteresses</h3>
                     <div class="list">
-                        <strong>Televisão</strong>
-                        <strong>Redes Sociais</strong>
-                        <strong>Frutos do Mar</strong>
+                        <span class="item">
+                            <h4>Televisão</h4>
+                            <span class="star2">
+                                <img src="images/icons/emote_cross.png">
+                                <img src="images/icons/emote_cross.png">
+                                <img src="images/icons/emote_cross.png">
+                                <img src="images/icons/emote_cross.png">
+                                <img src="images/icons/emote_cross.png">
+                            </span>
+                        </span>
+                        <span class="item">
+                            <h4>Redes Sociais</h4>
+                            <span class="star3">
+                                <img src="images/icons/emote_cross.png">
+                                <img src="images/icons/emote_cross.png">
+                                <img src="images/icons/emote_cross.png">
+                                <img src="images/icons/emote_cross.png">
+                                <img src="images/icons/emote_cross.png">
+                            </span>
+                        </span>
+                        <span class="item">
+                            <h4>Frutos do Mar</h4>
+                            <span class="star5">
+                                <img src="images/icons/emote_cross.png">
+                                <img src="images/icons/emote_cross.png">
+                                <img src="images/icons/emote_cross.png">
+                                <img src="images/icons/emote_cross.png">
+                                <img src="images/icons/emote_cross.png">
+                            </span>
+                        </span>
                     </div>
                 </div>
             </span>
