--- a/hardskills/modulohtml/aula23/webdev.html
+++ b/hardskills/modulohtml/aula23/webdev.html
@@ -1,8 +1,8 @@
 <div>
     <div>
         <div>
-            <h2>Desenvolvimento Web</h2>
-            <p>Me sinto muito animado em atuar nesta área, na qual almejo realizar minhas ambições profissionais.</p>
+            <h2>Olá, seja bem vindo!</h2>
+            <p>Sou Luis Gustavo, aspirante a Desenvolvedor <strong>WEB</strong> pela AlphaEdTech.</p>
         </div>
         <div>
             <hr>
