--- a/hardskills/modulohtml/aula24/index.html
+++ b/hardskills/modulohtml/aula24/index.html
@@ -9,7 +9,9 @@
     </head>
     <body>
         <header>
-            <img id="photo" src="images/photos/celular.png"/>
+            <span id="photo">
+                <img src="images/photos/luissemfundo2.png"/>
+            </span>
             <span>
                 <div id="titlebox">
                     <h1>Luis Gustavo C. Z. Pereira</h1>
@@ -23,55 +25,82 @@
                         <a href="http://" target="_blank" rel="noopener noreferrer"><img src="images/logos/icon-linkedin.png"/></a>
                         <a href="mailto:luisgustavoczp@gmail.com?subject=Sobre%20o%20Curriculo" target="_blank" rel="noopener noreferrer"><img src="images/logos/icon-email.png"/></a>
                     </div>
+                    <span>
+                        <h3>Foz do Iguaçu, Paraná</h3>
+                        <h3>13/01/1993</h3>
+                    </span>
                 </div>
-                <nav id="menu"></nav>
             </span>
         </header>
         <main>
             <article id="subpage">
-                <section id="incial">
-                    <h2>Olá, seja bem vindo!</h2>
-                    <p>Sou Luis Gustavo, Aspirante de <strong>Desenvolvedor WEB</strong> pela <i><b>AlphaEdTech</b></i>.</p>
-                    <p>Apaixonado por tecnologia e programação, possuo as habilidades necessárias para mergulhar fundo no mundo do desenvolvimento web. Profissional, otimista e sempre motivado com excelente comunicação, estou ansioso por um futuro brilhante na área. Navegue pelo meu site para ver tudo que tenho a oferecer.</p>
-                    <div id="formação">
-                        <h3>Formação</h3>
-                        <p><strong>Desenvolvimento e Analise de Sistemas</strong>, IFPR. <i>(Em formação)</i></p>
-                        <p><strong>Desenvolvimento Web</strong>, AlphaEdTech. <i>(Em formação)</i></p>
-                    </div>
-                </section>
+                <div>
+                    <section id="incial">
+                        <h2>Olá, seja bem vindo!</h2>
+                        <p>Sou Luis Gustavo, tenho 28 anos e sou aspirante de <strong>Desenvolvedor WEB</strong> pela <i><b>AlphaEdTech</b></i>.</p>
+                        <p>Apaixonado por tecnologia e programação, possuo as habilidades necessárias para mergulhar fundo no mundo do desenvolvimento web. Profissional, otimista e sempre motivado com excelente comunicação, estou ansioso por um futuro brilhante na área. Navegue pelo meu site para ver tudo que tenho a oferecer.</p>
+                        <div id="formação">
+                            <h3>Formação</h3>
+                            <p>- <strong>Desenvolvimento e Analise de Sistemas</strong>, IFPR. <i>(Em formação)</i></p>
+                            <p>- <strong>Desenvolvimento Web</strong>, AlphaEdTech. <i>(Em formação)</i></p>
+                        </div>
+                        <div>
+                            <h3>Objetivos</h3>
+                            <p>- Aplicar a tecnologia na vida da pessoas</p>
+                            <p>- Atuar como profissional <strong>Full-Stack</strong> com Front-End / Back-End</p>
+                        </div>
+                    </section>
+                    <section id="repositorio">
+                        <div>
+                            <span class="text-icon">
+                                <h3>Portifolio/Repositorio</h3>
+                                <img src="images/logos/icon-github.png" />
+                            </span>
+                            <span>
+                                <span>
+                                    <img src="images/logo-alphaedtech.png" />
+                                    <a href="https://github.com/LuisGustavoCZP/my_first_steps" target="_blank">AlphaEdTech</a>        
+                                </span>
+                                <span>
+                                    <img src="images/logo-ifpr.png" />
+                                    <a href="https://github.com/LuisGustavoCZP/IFPR-Desenvolvimento-Web-I" target="_blank">IFPR</a>  
+                                </span>
+                            </span>
+                        </div>
+                    </section>
+                </div>
                 <aside class="grade">
-                    <div>
-                        <h3>Habilidades <strong>Front-End</strong></h3>
-                        <div id="front-end" class="list">
+                    <section>
+                        <div>
+                            <h3>Habilidades <strong>Front-End</strong></h3>
+                            <div id="front-end" class="list"></div>
                         </div>
-                    </div>
-                    <div>
-                        <h3>Habilidades <strong>Back-End</strong></h3>
-                        <div id="back-end" class="list">
+                        <div>
+                            <h3>Habilidades <strong>Back-End</strong></h3>
+                            <div id="back-end" class="list"></div>
                         </div>
-                    </div>
-                    <div>
-                        <h3>Habilidades <strong>Soft</strong></h3>
-                        <div id="soft" class="list">
+                    </section>
+                    <section>
+                        <div>
+                            <h3>Habilidades <strong>Soft</strong></h3>
+                            <div id="soft" class="list"></div>
                         </div>
-                    </div>
-                    <div>
-                        <h3>Habilidades <strong>Extras</strong></h3>
-                        <div id="other" class="list">
+                        <div>
+                            <h3>Habilidades <strong>Extras</strong></h3>
+                            <div id="other" class="list"></div>
                         </div>
-                    </div>
+                    </section>
+                    <section>
+                        <div>
+                            <h3><strong>Interesses</strong></h3>
+                            <div id="like" class="list"></div>
+                        </div>
+                        <div>
+                            <h3><strong>Desinteresses</strong></h3>
+                            <div id="unlike" class="list"></div>
+                        </div>
+                    </section>
                 </aside>
-                <section id="repositorio">
-                    <span class="text-icon">
-                        <h3>Portifolio</h3>
-                        <img src="images/logos/icon-github.png" />
-                    </span>
-                    <span>
-                        <a href="https://github.com/LuisGustavoCZP/my_first_steps" target="_blank">Repositorio AlphaEdTech</a> 
-                        | 
-                        <a href="https://github.com/LuisGustavoCZP/IFPR-Desenvolvimento-Web-I" target="_blank">Repositorio IFPR</a>
-                    </span>
-                </section>
             </article>
         </main>
         <footer>
