--- a/hardskills/modulohtml/aula25/index.html
+++ b/hardskills/modulohtml/aula25/index.html
@@ -10,33 +10,168 @@
             <h4>FRETE INTERNACIONAL GRÁTIS</h4>
             <span id="menu">
                 <header>
-                    <h1>RAW</h1>
-                    <div>
-                        <h5>ETC</h5>
-                        <span></span>
-                    </div>
+                    <a>
+                        <h1>RAW</h1>
+                        <div>
+                            <h5>ETC</h5>
+                            <span></span>
+                        </div>
+                    </a>
                 </header>
                 <nav>
                     <ul>
-                        <li><img src="images/svgs/carrinho.svg" height="13px" width="72px" /></li>
-                        <li><img src="images/svgs/menu.svg" width="34px" /></li>
+                        <li><a><img src="images/svgs/carrinho.svg" height="13px" width="72px" /></a></li>
+                        <li><a><img src="images/svgs/menu.svg" width="34px" /></a></li>
                     </ul>
                 </nav>
             </span>
         </div>
         <main>
-            <div id="logophoto">
+            <section id="logophoto">
                 <div>
                     <div>
                         <h2>SEJA SEMPRE ORIGINAL</h2>
                         <h4>NOVOS ITENS DISPONÍVEIS AQUI</h4>
-                        <a>Comprar</a>
+                        <a class="botao">Comprar</a>
                     </div>
                 </div>
-            </div>
+            </section>
+            <section id="mostruario">
+                <h2>COLEÇÃO DE EDIÇÃO LIMITADA</h2>
+                <ul>
+                    <li>
+                        <a class="produto">
+                            <div class="mostrador">
+                                <img src="images/photos/bones/bone1a.webp">
+                                <div class="alternative">
+                                    <img src="images/photos/bones/bone1b.webp">
+                                </div>
+                            </div>
+                            <span class="desc"><button>Visualização rápida</button></span>
+                            <div class="info">
+                                <h4>Sou um produto</h4>
+                                <h5>R$25,00</h5>
+                            </div>
+                        </a>
+                    </li>
+                    <li>
+                        <a class="produto">
+                            <div class="mostrador">
+                                <img src="images/photos/bones/bone2a.webp">
+                                <div class="alternative">
+                                    <img src="images/photos/bones/bone2b.webp">
+                                </div>
+                            </div>
+                            <span class="desc"><button>Visualização rápida</button></span>
+                            <div class="info">
+                                <h4>Sou um produto</h4>
+                                <h5>R$25,00</h5>
+                            </div>
+                        </a>
+                    </li>
+                    <li>
+                        <a class="produto">
+                            <div class="mostrador">
+                                <img src="images/photos/bones/bone3a.webp">
+                                <div class="alternative">
+                                    <img src="images/photos/bones/bone3b.webp">
+                                </div>
+                            </div>
+                            <span class="desc"><button>Visualização rápida</button></span>
+                            <div class="info">
+                                <h4>Sou um produto</h4>
+                                <h5>R$25,00</h5>
+                            </div>
+                        </a>
+                    </li>
+                    <li>
+                        <a class="produto">
+                            <div class="mostrador">
+                                <img src="images/photos/bones/bone4a.webp">
+                                <div class="alternative">
+                                    <img src="images/photos/bones/bone4b.webp">
+                                </div>
+                            </div>
+                            <span class="desc"><button>Visualização rápida</button></span>
+                            <div class="info">
+                                <h4>Sou um produto</h4>
+                                <h5>R$25,00</h5>
+                            </div>
+                        </a>
+                    </li>
+                    <li>
+                        <a class="produto">
+                            <div class="mostrador">
+                                <img src="images/photos/bones/bone5a.webp">
+                                <div class="alternative">
+                                    <img src="images/photos/bones/bone5b.webp">
+                                </div>
+                            </div>
+                            <span class="desc"><button>Visualização rápida</button></span>
+                            <div class="info">
+                                <h4>Sou um produto</h4>
+                                <h5>R$25,00</h5>
+                            </div>
+                        </a>
+                    </li>
+                    <li>
+                        <a class="produto">
+                            <div class="mostrador">
+                                <img src="images/photos/bones/bone6a.webp">
+                                <div class="alternative">
+                                    <img src="images/photos/bones/bone6b.webp">
+                                </div>
+                            </div>
+                            <span class="desc"><button>Visualização rápida</button></span>
+                            <div class="info">
+                                <h4>Sou um produto</h4>
+                                <h5>R$25,00</h5>
+                            </div>
+                        </a>
+                    </li>
+                    <li>
+                        <a class="produto">
+                            <div class="mostrador">
+                                <img src="images/photos/bones/bone7a.webp">
+                                <div class="alternative">
+                                    <img src="images/photos/bones/bone7b.webp">
+                                </div>
+                            </div>
+                            <span class="desc"><button>Visualização rápida</button></span>
+                            <div class="info">
+                                <h4>Sou um produto</h4>
+                                <h5>R$25,00</h5>
+                            </div>
+                        </a>
+                    </li>
+                    <li>
+                        <a class="produto">
+                            <div class="mostrador">
+                                <img src="images/photos/bones/bone8a.webp">
+                                <div class="alternative">
+                                    <img src="images/photos/bones/bone8b.webp">
+                                </div>
+                            </div>
+                            <span class="desc"><button>Visualização rápida</button></span>
+                            <div class="info">
+                                <h4>Sou um produto</h4>
+                                <h5>R$25,00</h5>
+                            </div>
+                        </a>
+                    </li>
+                </ul>
+                <span><a class="botao">Ver tudo</a></span>
+            </section>
         </main>
-        <footer>
+        <aside id="social">
+            <h2>#INSTAGRAM</h2>
+            <div>
 
+            </div>
+        </aside>
+        <footer>
+            <div></div>
+            <section></section>
         </footer>
     </body>
 </html>
