--- a/hardskills/modulohtml/aula25/index.html
+++ b/hardskills/modulohtml/aula25/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html lang="pt-br">
     <head>
-        <title>OPOLONORTE</title>
+        <meta charset="utf-8">
+        <title>Bonés RawEtc</title>
         <link rel="stylesheet" href="styles/fontFace.css">
         <link rel="stylesheet" href="styles/style.css">
     </head>
