--- a/hardskills/modulohtml/aula25/index.html
+++ b/hardskills/modulohtml/aula25/index.html
@@ -166,13 +166,115 @@
         </main>
         <aside id="social">
             <h2>#INSTAGRAM</h2>
-            <div>
-
+            <ul>
+                <section class="grade" id="grade1">
+                    <li class="photo">
+                        <div>
+                            <img src="images/photos/mosaico/01.jpg" />
+                            <div><h5>@wix: #wix, #website, #freewebsite, #websitetemplate, #wix.com</h5></div>
+                        </div>
+                    </li>
+                    <li class="photo">
+                        <div>
+                            <img src="images/photos/mosaico/02.jpg" />
+                            <div><h5>@wix: #wix, #website, #freewebsite, #websitetemplate, #wix.com</h5></div>
+                        </div>
+                    </li>
+                    <li class="photo">
+                        <div>
+                            <img src="images/photos/mosaico/04.jpg" />
+                            <div><h5>@wix: #wix, #website, #freewebsite, #websitetemplate, #wix.com</h5></div>
+                        </div>
+                    </li>
+                    <li class="photo">
+                        <div>
+                            <img src="images/photos/mosaico/03.jpg" />
+                            <div><h5>@wix: #wix, #website, #freewebsite, #websitetemplate, #wix.com</h5></div>
+                        </div>
+                    </li>
+                    <li class="photo">
+                        <div>
+                            <img src="images/photos/mosaico/05.jpg" />
+                            <div><h5>@wix: #wix, #website, #freewebsite, #websitetemplate, #wix.com</h5></div>
+                        </div>
+                    </li>
+                    <li class="photo">
+                        <div>
+                            <img src="images/photos/mosaico/06.jpg" />
+                            <div><h5>@wix: #wix, #website, #freewebsite, #websitetemplate, #wix.com</h5></div>
+                        </div>
+                    </li>
+                </section>
+                <section class="grade" id="grade2">
+                    <li class="photo">
+                        <div>
+                            <img src="images/photos/mosaico/07.jpg" />
+                            <div><h5>@wix: #wix, #website, #freewebsite, #websitetemplate, #wix.com</h5></div>
+                        </div>
+                    </li>
+                    <li class="photo">
+                        <div>
+                            <img src="images/photos/mosaico/10.jpg" />
+                            <div><h5>@wix: #wix, #website, #freewebsite, #websitetemplate, #wix.com</h5></div>
+                        </div>
+                    </li>
+                    <li class="photo">
+                        <div>
+                            <img src="images/photos/mosaico/11.jpg" />
+                            <div><h5>@wix: #wix, #website, #freewebsite, #websitetemplate, #wix.com</h5></div>
+                        </div>
+                    </li>
+                    <li class="photo">
+                        <div>
+                            <img src="images/photos/mosaico/08.jpg" />
+                            <div><h5>@wix: #wix, #website, #freewebsite, #websitetemplate, #wix.com</h5></div>
+                        </div>
+                    </li>
+                    <li class="photo">
+                        <div>
+                            <img src="images/photos/mosaico/09.jpg" />
+                            <div><h5>@wix: #wix, #website, #freewebsite, #websitetemplate, #wix.com</h5></div>
+                        </div>
+                    </li>
+                    <li class="photo">
+                        <div>
+                            <img src="images/photos/mosaico/12.jpg" />
+                            <div><h5>@wix: #wix, #website, #freewebsite, #websitetemplate, #wix.com</h5></div>
+                        </div>
+                    </li>
+                </section>
             </div>
         </aside>
         <footer>
-            <div></div>
-            <section></section>
+            <section id="submenu">
+                <nav>
+                    <ul>
+                        <li><a>Loja</a></li>
+                        <li><a>Revendedores</a></li>
+                        <li><a>Blog</a></li>
+                        <li><a>Quem somos</a></li>
+                        <li><a>Contato</a></li>
+                    </ul>
+                    <ul>
+                        <li><a>FAQ</a></li>
+                        <li><a>Envio e devoluções</a></li>
+                        <li><a>Política da loja</a></li>
+                        <li><a>Métodos de pagamento</a></li>
+                    </ul>
+                </nav>
+                <div>
+                    <input type="email" name="email" id="contactmail">
+                </div>
+            </section>
+            <section id="endfooter">
+                <h6>
+                    ©2023 por Raw.etc. Orgulhosamente criado com Wix.com
+                    <br>
+                    Raw.etc Ltda. - CPF/CNPJ: 12.345.678/0000-01 - Av. Bernardino de Campos, 98 São Paulo,
+                    <br>
+                    SP 12345-678 - info@meusite.com - Telefone: (11) 3456-7890
+                </h6>
+            </section>
         </footer>
     </body>
 </html>
