--- a/hardskills/modulohtml/aula25/index.html
+++ b/hardskills/modulohtml/aula25/index.html
@@ -263,7 +263,17 @@
                     </ul>
                 </nav>
                 <div>
-                    <input type="email" name="email" id="contactmail">
+                    <span>
+                        <input type="email" name="email" id="contactmail" rule="email" placeholder="Insira seu email aqui*"/>
+                        <input type="submit" name="send" id="sendmail" value="Participar" />
+                    </span>
+                    <span>
+                        <img src="images/icons/facebook.webp" />
+                        <img src="images/icons/instagram.webp" />
+                        <img src="images/icons/pinterest.webp" />
+                        <img src="images/icons/youtube.webp" />
+                        <img src="images/icons/twitter.webp" />
+                    </span>
                 </div>
             </section>
             <section id="endfooter">
